@startuml

abstract class Person{
-name:string
-lastName:string
-isArchive:bool
+ <<virtual>> getInfo(): string
}

!ifndef UKRYJ_NOTATKI

note right of Person
Abstrakcyjna klasa reprezentująca
człowieka.
name - imie
lastName - nazwisko
isArchive - prezentuje czy dany człowiek jest archiwalny.
end note

!endif

abstract class Personnel{}

Person <|-- Personnel
Person <|-- Patient

@enduml